src/objects/MUSW__Review__c.object
<CustomObject>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Application</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Maintenance Request</fullName>
                </value>
                <value>
                    <fullName>CE Audit</fullName>
                </value>
                <value>
                    <fullName>Comity</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Exam Review</fullName>
                    <isActive>false</isActive>
                    <label>Exam Review</label>
                </value>
                <value>
                    <fullName>New Application</fullName>
                    <isActive>false</isActive>
                    <label>New Application</label>
                </value>
                <value>
                    <fullName>Renew</fullName>
                    <isActive>false</isActive>
                    <label>Renew</label>
                </value>
                <value>
                    <fullName>Sending Activation Code</fullName>
                    <isActive>false</isActive>
                    <label>Sending Activation Code</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_for__c</fullName>
        <label>Checklist Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A degree in Architectural Technology</fullName>
                </value>
                <value>
                    <fullName>Architect by Reciprocity - licensed less than 9 years</fullName>
                </value>
                <value>
                    <fullName>Architect by Reciprocity - licensed more 9 years licensure</fullName>
                </value>
                <value>
                    <fullName>Architect Direct Registration</fullName>
                </value>
                <value>
                    <fullName>Architect Firm</fullName>
                </value>
                <value>
                    <fullName>Foreign Degree</fullName>
                </value>
                <value>
                    <fullName>High School Diploma</fullName>
                </value>
                <value>
                    <fullName>Non-accredited Bachelor or Master in architecture</fullName>
                </value>
                <value>
                    <fullName>Postsecondary Study in Architecture or Related Fields</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_for_del__c</fullName>
        <label>Checklist Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Review_for</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Review Start Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <formula>Case( MUSW__Status__c, 
&quot;Approved&quot;,&quot;Approved&quot;, 
&quot;Denied&quot;,&quot;Failed&quot;, 
&quot;Pending&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Fee</label>
        <type>Checkbox</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>Appraisal_Management_Company_Queue_Review</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Appraisal Management Company Queue</value>
        </filters>
        <label>Appraisal Management Company Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Camping_Resorts_Queue_Review</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Miliatary__c</columns>
        <columns>Military_Spouse__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Camping Resorts Queue</value>
        </filters>
        <label>Camping Resorts Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Courses_Queue_Review</fullName>
        <columns>License_Record_Type__c</columns>
        <columns>Applicant_Licensee_Name__c</columns>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>Review_Type__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Courses Queue</value>
        </filters>
        <label>Courses Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Miliatary__c</columns>
        <columns>Military_Spouse__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Notaries_Queue_Review</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Miliatary__c</columns>
        <columns>Military_Spouse__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Notaries Queue</value>
        </filters>
        <label>Notaries Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RBS_Queue_Review</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Miliatary__c</columns>
        <columns>Military_Spouse__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>RBS Queue</value>
        </filters>
        <label>RBS Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RBS_Queue_Review1</fullName>
        <columns>NAME</columns>
        <columns>Review_Type__c</columns>
        <columns>License_Type__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>RBS Queue</label>
        <queue>RBS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RE_Appraisers_CE_Audit_Queue</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Status__c</columns>
        <columns>License_Type__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>MUSW__Application2__c</columns>
        <columns>Application_Type__c</columns>
        <columns>MUSW__Permit2__c</columns>
        <columns>Plan_Review__c</columns>
        <columns>MUSW__Related_To__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MUSW__Review__c.CE_Audit_Review</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Appraisers - Real Estate</value>
        </filters>
        <label>RE Appraisers - CE Audit Queue</label>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Appraisers_Queue_Review</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Miliatary__c</columns>
        <columns>Military_Spouse__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Real Estate Appraisers Queue</value>
        </filters>
        <filters>
            <field>Status2__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <label>Real Estate Appraisers Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Review_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Reviewer Queue</label>
        <queue>Reviewer_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reviewer_Queue_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Reviewer Queue</label>
        <queue>Reviewer_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Timeshare_Queue_Review</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Renewal_Application__c</columns>
        <columns>License_Type__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Miliatary__c</columns>
        <columns>Military_Spouse__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Timeshare Queue</value>
        </filters>
        <label>Timeshare Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <recordTypes>
        <fullName>CE_Audit_Review</fullName>
        <active>true</active>
        <description>Used for CE Audit Review</description>
        <label>CE Audit Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Certified_General_Appraiser</fullName>
        <active>true</active>
        <description>Certified General Appraiser</description>
        <label>Certified General Appraiser</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delegated_Agent</fullName>
        <active>true</active>
        <label>Delegated Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dwelling_Contractor</fullName>
        <active>true</active>
        <label>Dwelling Contractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dwelling_Contractor_Qualifier</fullName>
        <active>true</active>
        <label>Dwelling Contractor Qualifier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Embalmer</fullName>
        <active>true</active>
        <label>Embalmer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inspection_Agency</fullName>
        <active>true</active>
        <label>Inspection Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>License_Review</fullName>
        <active>true</active>
        <description>Used for License Review</description>
        <label>License Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>MHI_Review</fullName>
        <active>true</active>
        <label>MHI - Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintenance_Request_Review</fullName>
        <active>true</active>
        <description>Used for Maintenance Request Review</description>
        <label>Maintenance Request Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufactured_Home</fullName>
        <active>true</active>
        <label>Manufactured Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufactured_Home_Plan_Review</fullName>
        <active>true</active>
        <label>Manufactured Home Plan Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>POWTS</fullName>
        <active>true</active>
        <label>POWTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Soil_Erosion_Inspection</fullName>
        <active>true</active>
        <label>Soil Erosion Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Soil_Professions</fullName>
        <active>true</active>
        <label>Soil Professions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Soil_Tester</fullName>
        <active>true</active>
        <label>Soil Tester</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Licensed_Appraiser</fullName>
        <active>true</active>
        <label>State Licensed Appraiser</label>
    </recordTypes>
    <recordTypes>
        <fullName>UDC_Credential</fullName>
        <active>true</active>
        <label>UDC Credential</label>
    </recordTypes>
    <recordTypes>
        <fullName>UDC_Inspectors</fullName>
        <active>true</active>
        <label>UDC Inspectors</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Active_DCP_for_Appraisal_Management</fullName>
        <active>true</active>
        <description>Need  Active DCP for Appraisal Management Company  License to be Active</description>
        <errorConditionFormula>AND(NOT(ISBLANK(License__c)),ISPICKVAL(Review_Type__c,&apos;General Application&apos;),ISPICKVAL(License__r.Credential_Type__c,&apos;Appraisal Management Company&apos;),ISPICKVAL(MUSW__Status__c,&apos;Approved&apos;), ISBLANK(License__r.Account_Contact__c))</errorConditionFormula>
        <errorMessage>License should have active DCP  to make license active.</errorMessage>
    </validationRules>
</CustomObject>